# tauri-plugin-i18n

./: Cargo.toml  README.md  build.rs
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts  package.json
src/: backend.rs  commands.rs  lib.rs  models.rs
